corrected links align

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,6 +9,7 @@
     border-radius: 10px;
     z-index: 4;
     padding: 10px;
+    text-align: left;
     background: linear-gradient(134.17deg, #F9F9FB 4.98%, #F3F5F8 94.88%);
     box-shadow: -14.9774px -14.9774px 24.9624px rgba(255, 255, 255, 0.8), 12.4812px 12.4812px 24.9624px rgba(166, 180, 200, 0.7);
     a {
